# senec-c

./: .neoconf.json  Cargo.toml  README.md  b.sh  build.rs
display/: Cargo.toml  build.rs
display/src/: lib.rs
firmware/: .neoconf.json  Cargo.toml  build.rs  build.sh  sdkconfig.defaults
firmware/.cargo/: config.toml
firmware/src/: client.rs  main.rs  types.rs
gerbers/: senec-c-B_Cu.gbr  senec-c-B_Mask.gbr  senec-c-B_Paste.gbr  senec-c-B_Silkscreen.gbr  senec-c-Edge_Cuts.gbr  senec-c-F_Cu.gbr  senec-c-F_Mask.gbr  senec-c-F_Paste.gbr  senec-c-F_Silkscreen.gbr  senec-c-NPTH.drl  senec-c-PTH.drl  senec-c-job.gbrjob
simulator/: Cargo.toml  Readme.md  hotpatch.sh  watch.sh
simulator/src/: main.rs
src/: display.rs  lib.rs  main.rs  types.proto  types.rs  wifi.rs
