[package]
name = "senec-c"
version = "0.1.0"
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"




[features]
default = ["std", "embassy", "esp-idf-svc/native"]
simulated = ["std"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.50.0", default-features = false }
esp-idf-hal ={ version = "0.45.0", default-features = false}
embedded-graphics = "0.8.1"
embedded-svc = "0.28"
anyhow = "1.0.79"
rand = "0.8.5"
embedded-hal = "0.2.7"
prost = {version = "0.13.2",default-features = false, features = ["prost-derive"]}
prost-types = "0.13"
tungstenite = "0.26.1"
embedded-graphics-simulator = {version ="0.7.0",optional = true}
embedded-graphics-core = "0.4.0"
epd-waveshare = "0.6.0"
heapless = "0.8.0"
[build-dependencies]
prost-build = "0.13.4"
embuild = "0.33"
dotenv = "0.15.0"
