[workspace]
members = [
    "firmware",
    "display",
    "simulator"
]
resolver = "2"

[workspace.dependencies]

embedded-graphics-simulator = {version ="0.7.0"}
embedded-graphics = "0.8.1"
anyhow = "1.0.79"
prost = {version = "0.13.2"}
prost-types = "0.13"
tungstenite = "0.26.1"
embedded-graphics-core = "0.4.0"
epd-waveshare = "0.6.0"
prost-build = {version = "0.13.4"}
