[package]
name = "simulator"
edition = "2021"


[dependencies]
embedded-graphics-simulator = {version = "0.7.0"}
embedded-graphics = {version = "0.8.1"}
tungstenite = {version = "0.26.1"}
log = { version = "0.4"}
anyhow = {version= "1.0.79"}

prost = {version = "0.13.2"}
prost-types = {version = "0.13"}
embedded-graphics-core = {version = "0.4.0"}


epd-waveshare = {version = "0.6.0"}
display = {path = "../display"}
dioxus-devtools = "0.7.0-alpha.0"
